# rtrg_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  utils_test.cpp  vcpkg.json
Application/: CMakeLists.txt  main.cpp
Assets/Shaders/: BasicGeometry.frag  BasicGeometry.vert  BasicGeometry_Template.frag  BasicSkinnedGeometry.vert  FullscreenQuad.vert  ShaderToySample.frag  UnifiedGeometryBuffer.Library.glsl  UnifiedGeometryBuffer.Shared.Common.Library.h  UnifiedGeometryBufferLookupTableUpdate.comp  UnifiedGometryBufferLookupTableUpdate.comp
Assets/Shaders/Common/: Common.Library.glsl  Skinning.Library.glsl
Framework/: Animation.hpp  Application.cpp  Application.hpp  AssetHelper.hpp  BasicRenderPipeline.cpp  BasicRenderPipeline.hpp  CMakeLists.txt  Camera.hpp  Core.hpp  FrameData.cpp  FrameData.hpp  ImGuiUtils.cpp  ImGuiUtils.hpp  Math.hpp  Memory.hpp  Mesh.hpp  MeshImporter.cpp  MeshImporter.hpp  MiniAssetImporterEditor.hpp  Profiler.hpp  RenderPasses.cpp  RenderPasses.hpp  SDL3Utils.hpp  Scene.cpp  Scene.hpp  Utils.cpp  Utils.hpp  VmaUtils.cpp  VmaUtils.hpp  VolkUtils.cpp  VulkanRHI.cpp  VulkanRHI.hpp  assimp.natvis  utils.cpp  utils.hpp
Test/: AssetStoringLoading_test.cpp  CMakeLists.txt  MeshImporter_test.cpp  utils_test.cpp
